--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="d-flex flex-row gap-2">
       <app-menu-category class="w-25"></app-menu-category>
       <div class="flex-row-1 p-2 text-nowrap w-75">
-         <!-- <router-outlet></router-outlet> -->
+         <router-outlet></router-outlet>
       </div>
     </div>
   </div>
