--- a/src/app/components/crud/crud-create/crud-create.component.html
+++ b/src/app/components/crud/crud-create/crud-create.component.html
@@ -1,4 +1,31 @@
 <div class="d-flex flex-column gap-2">
     <app-crud-navbar></app-crud-navbar>
     <div>Add</div>
+    <form [formGroup]="form" class="d-flex flex-column">
+        <mat-form-field>
+            <mat-label>
+                Product Name
+            </mat-label>
+            <input matInput type="text" formControlName="productName" />
+            @if (form.get("productName").invalid && form.get('productName').touched){
+                <mat-error>
+                    Product name is required.
+                </mat-error>
+            }
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>
+                Short desc
+            </mat-label>
+            <input matInput type="text" formControlName="shortDesc" />
+            @if (form.get("shortDesc").invalid){
+                <mat-error>
+                    Invalid description required
+                </mat-error>
+            }
+        </mat-form-field>
+        <button mat-flat-button color="primary" [disabled]="form.invalid" (click)="onSubmit(form.value)">
+            Add
+        </button>
+    </form>
 </div>
