--- a/src/app/components/crud/crud-read/crud-read.component.html
+++ b/src/app/components/crud/crud-read/crud-read.component.html
@@ -2,3 +2,15 @@
     <app-crud-navbar></app-crud-navbar>
     <div>Read</div>
 </div>
+<div class="d-flex flex-column gap-2 mt-2 w-75">
+    <div *ngFor="let product of products">
+        <mat-card>
+            <mat-card-title>
+                {{product.productName}}
+            </mat-card-title>
+            <mat-card-content>
+                {{product.shortDesc}}
+            </mat-card-content>            
+        </mat-card>
+    </div>
+</div>
