--- a/src/app/components/crud/crud-navbar/crud-navbar.component.html
+++ b/src/app/components/crud/crud-navbar/crud-navbar.component.html
@@ -11,13 +11,13 @@
           class="nav-link"
           routerLink="/product/add"
           [routerLinkActive]="['active']">
-          Add
+          Add a Product
         </a>
         <a
           class="nav-link"
           routerLink="/product/read"
           [routerLinkActive]="['active']">
-          Read
+          Get All Product List or Search
         </a>
         <a
           class="nav-link"
