--- a/src/app/components/crud/crud-update/crud-update.component.html
+++ b/src/app/components/crud/crud-update/crud-update.component.html
@@ -1,4 +1,76 @@
 <div class="d-flex flex-column gap-2">
+    
     <app-crud-navbar></app-crud-navbar>
-    <div>Update</div>
+    <form [formGroup]="searchForm" class="d-flex flex-column gap-2 mt-2 w-50">
+        <mat-form-field appearance="fill">
+          <mat-label>Search ID</mat-label>
+          <input matInput type="search" formControlName="searchId" />
+          <mat-error *ngIf="searchForm.get('searchId').invalid && searchForm.get('searchId').touched">
+            Search ID is required and must be a number.
+          </mat-error>
+        </mat-form-field>
+        <button class="w-25" mat-flat-button color="primary" [disabled]="searchForm.invalid" (click)="onSubmit(searchForm.value)">
+          Search
+        </button>
+      </form>
+    
+      <!-- Product Details for Updating -->
+      <div *ngIf="selectedProduct">
+        <form [formGroup]="updateForm" class="d-flex flex-column gap-2 mt-2 w-75">
+          <mat-card>
+            <mat-card-content>
+              <mat-form-field appearance="fill">
+                <mat-label>Product Name</mat-label>
+                <input matInput formControlName="productName" />
+              </mat-form-field>
+            </mat-card-content>
+            <mat-card-content>
+              <mat-form-field appearance="fill">
+                <mat-label>Short Description</mat-label>
+                <input matInput formControlName="shortDesc" />
+              </mat-form-field>
+            </mat-card-content>
+            <mat-card-content>
+              Product ID: <strong>{{ selectedProduct.id }}</strong>
+            </mat-card-content>
+            <div class="text-end">
+              <button mat-flat-button (click)="updateProduct()" class="bg-warning text-primary">Update</button>
+            </div>
+          </mat-card>
+        </form>
+      </div>
+    
+
+    
+    
+</div>
+<div class="product-list" [style.display]="selectedProduct ? 'none' : 'block'">
+    <div class="d-flex flex-column gap-2 mt-2 w-75">
+        <br>
+        Product List:
+        <div *ngFor="let product of products">
+          <form [formGroup]="getFormGroup(product.id)" class="d-flex flex-column gap-2 mt-2">
+            <mat-card>
+              <mat-card-content>
+                <mat-form-field>
+                  <mat-label>Product Name</mat-label>
+                  <input matInput formControlName="productName" />
+                </mat-form-field>
+              </mat-card-content>
+              <mat-card-content>
+                <mat-form-field appearance="fill">
+                  <mat-label>Short Description</mat-label>
+                  <input matInput formControlName="shortDesc" />
+                </mat-form-field>
+              </mat-card-content>
+              <mat-card-content>
+                Product id: <strong>{{ product.id }}</strong>
+              </mat-card-content>
+              <div class="text-end">
+                <button mat-flat-button (click)="updateProductInList(product.id)" class="bg-warning text-primary">Update</button>
+              </div>
+            </mat-card>
+          </form>
+        </div>
+      </div>
 </div>
