--- a/src/app/components/crud/crud-update/crud-update.component.html
+++ b/src/app/components/crud/crud-update/crud-update.component.html
@@ -14,8 +14,8 @@
         </button>
       </form>
     
-      <!-- Product Details for Updating -->
-      <div *ngIf="selectedProduct">
+      <!-- product details for update -->
+      <div *ngIf="product">
         <form [formGroup]="updateForm" class="d-flex flex-column gap-2 mt-2 w-75">
           <mat-card>
             <mat-card-content>
@@ -31,7 +31,7 @@
               </mat-form-field>
             </mat-card-content>
             <mat-card-content>
-              Product ID: <strong>{{ selectedProduct.id }}</strong>
+              Product ID: <strong>{{ product.id }}</strong>
             </mat-card-content>
             <div class="text-end">
               <button mat-flat-button (click)="updateProduct()" class="bg-warning text-primary">Update</button>
@@ -44,7 +44,7 @@
     
     
 </div>
-<div class="product-list" [style.display]="selectedProduct ? 'none' : 'block'">
+<div class="product-list" [style.display]="product ? 'none' : 'block'">
     <div class="d-flex flex-column gap-2 mt-2 w-75">
         <br>
         Product List:
